<resources>
    <string name="app_name">DBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="default_speed">0.0</string>
    <string name="wheel_size_hint">Input wheel size in mm</string>
    <string name="speed_units">Speed units</string>
    <string name="mph">m/h</string>
    <string name="kph">km/h</string>
</resources>